fix(media__heading): set spacing and size of media__heading (#30)
* fix(media__heading): set spacing and size of media__heading

* fix(media-column): modify example markup

--- a/components/elements/tn-media-mixins.scss
+++ b/components/elements/tn-media-mixins.scss
@@ -1,3 +1,5 @@
+@import "../typography/tn-headings-mixins";
+@import "../_variables/typography";
 @import "../_variables/sizes";
 
 @mixin tn-media {
@@ -5,6 +7,8 @@
 }
 
 @mixin tn-media__heading {
+  @include tn-heading($tn-font-size--h3);
+
   margin: $tn-spacing--standard-element-nonbordered 0;
 }
 
